# lwdid-py

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_fix.py  test_hc_staggered.py  verify_hc_status.py
.github/workflows/: ci.yml
docs/: requirements.txt  validation_stata_comparison.md  wild_bootstrap_notes.md
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  methodological_notes.rst  quickstart.rst  user_guide.rst
examples/: README_walmart.md  REPLICATION_RESULTS.md  castle_law.ipynb  ri_method_comparison.py  smoking.ipynb  smoking_period_effects.csv  smoking_results.tex  smoking_results.xlsx  walmart_application.ipynb  walmart_application.py
paper/: paper.bib  paper.md
src/lwdid/: __init__.py  clustering_diagnostics.py  core.py  estimation.py  exceptions.py  randomization.py  results.py  selection_diagnostics.py  sensitivity.py  transformations.py  trend_diagnostics.py  validation.py  visualization.py  warning_registry.py  warnings_categories.py
tests/: BUG_FIXES_REPORT.md  __init__.py  check_residuals.py  compare_algorithms.py  conftest.py  debug_bootstrap_convergence.py  debug_bootstrap_detailed.py  debug_boottest_formula.py  debug_crv3_se.py  debug_match_stata.py  debug_pvalue_calculation.py  debug_se_calculation.py  debug_small_sample.py  debug_test_inversion.py  debug_wildboottest_pkg.py  deep_ci_analysis.py  diagnose_comprehensive.py  diagnose_control_group.py  diagnose_control_group_definition.py  diagnose_control_group_v2.py  diagnose_deep_root_cause.py  diagnose_demean_bias.py  diagnose_demean_detail.py  diagnose_demean_detailed.py  diagnose_demean_detailed_v2.py  diagnose_demean_formula.py  diagnose_final_verification.py  diagnose_formula_interpretation.py  diagnose_ipwra_effect.py  diagnose_ipwra_effect_detailed.py  diagnose_ipwra_formula.py  diagnose_ipwra_vs_simple.py  diagnose_ipwra_watt.py  diagnose_late_event_times.py  diagnose_long_diff_vs_demean.py  diagnose_long_difference.py  diagnose_paper_table_a4.py  diagnose_pre_treatment_demean.py  diagnose_root_cause.py  diagnose_transformation_method.py  (+232 more)
tests/data/: detrend_e2e_python_result.csv  detrend_e2e_test.csv  lw_common_timing_validation.csv  mve_demean.csv  mve_detrend.csv  psm_crosssection_small.csv  psm_crosssection_test.csv  psm_test_n100.csv  smoking_controls_large.csv  smoking_controls_small.csv  smoking_quarterly.csv  staggered_simulation.csv
tests/inference/: __init__.py  test_ri_optimization.py  test_wild_bootstrap_optimization.py  test_wild_bootstrap_test_inversion.py
tests/monte_carlo/: __init__.py
tests/staggered/: __init__.py  bug041_extreme_test_data.csv  bug041_test_data.csv  cattaneo2_test.csv  conftest.py  nlsw88_test.csv  simulated_test.csv  stata_cluster_results.json  stata_ipwra_results.json  stata_tebalance_cattaneo2.json  test_bootstrap_numerical_validation.py  test_bootstrap_threshold_consistency.py  test_bug004_ipwra_bootstrap_weights.py  test_bug007_ddof_consistency.py  test_bug007_stata_e2e.py  test_bug010_stata_validation.py  test_bug018_rolling_none.py  test_bug019_ri_failure_state.py  test_bug021_column_conflict.py  test_bug022_023_staggered_export.py  test_bug024_nt_consistency.py  test_bug032_bootstrap_params.py  test_bug036_ddof_boundary.py  test_bug038_match_order_bootstrap.py  test_bug038_valid_cohorts_consistency.py  test_bug039_bootstrap_threshold.py  test_bug041_weight_consistency.py  test_bug045_nan_ref_period_validation.py  test_bug060l_monte_carlo.py  (+87 more)
(+112 files in other folders)
