[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lwdid"
version = "0.1.0"
description = "Lee & Wooldridge Difference-in-Differences estimator for small cross-sectional sample sizes"
authors = [
    {name = "Xuanyu Cai", email = "F23090105414@cityu.edu.mo"},
    {name = "Wenli Xu", email = "wlxu@cityu.edu.mo"}
]
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "AGPL-3.0-or-later"}
keywords = ["econometrics", "difference-in-differences", "panel-data", "causal-inference"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20,<3.0",
    "pandas>=1.3,<3.0",
    "scipy>=1.7,<2.0",
    "statsmodels>=0.13,<1.0",
    "matplotlib>=3.3",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/gorgeousfish/lwdid-py"
Repository = "https://github.com/gorgeousfish/lwdid-py"
Issues = "https://github.com/gorgeousfish/lwdid-py/issues"
Documentation = "https://lwdid.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]









