[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lwdid"
version = "0.2.0"
description = "Lee & Wooldridge Difference-in-Differences with rolling transformations for panel data"
authors = [
    {name = "Xuanyu Cai", email = "F23090105414@cityu.edu.mo"},
    {name = "Wenli Xu", email = "wlxu@cityu.edu.mo"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "AGPL-3.0-or-later"}
keywords = ["econometrics", "difference-in-differences", "panel-data", "causal-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20,<3.0",
    "pandas>=1.3,<3.0",
    "scipy>=1.7",
    "statsmodels>=0.13,<1.0",
    "scikit-learn>=1.0",
    "matplotlib>=3.3",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/gorgeousfish/lwdid-py"
Repository = "https://github.com/gorgeousfish/lwdid-py"
Issues = "https://github.com/gorgeousfish/lwdid-py/issues"
Documentation = "https://lwdid.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas-stubs>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["lwdid"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
